# lan-clip

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  project.clj
.claude/: agent-policy.md  loop.md
.github/workflows/: build.yml
doc/: intro.md
doc/notes/: PROJECT_NOTES.md  TECHNICAL_DEBT.md  TODO.md  project-overview.md  release-checklist.md  rust-migration-evaluation.md  tauri-desktop-landing-plan.md
resources/: config.edn
src/lan_clip/: acceptance.clj  api.clj  app.clj  clipboard.clj  config.clj  core.clj  discovery.clj  fingerprint.clj  history.clj  log.clj  message_cache.clj  protocol.clj  sidecar.clj  util.clj  watcher.clj
src/lan_clip/socket/: client.clj  content.clj  protocol_codec.clj  server.clj
src/lan_clip/ui/: core.clj  fx.clj
test/lan_clip/: acceptance_test.clj  api_test.clj  app_test.clj  clipboard_test.clj  config_test.clj  core_test.clj  discovery_test.clj  fingerprint_test.clj  history_test.clj  log_test.clj  message_cache_test.clj  pairing_test.clj  protocol_test.clj  sidecar_test.clj  util_test.clj  watcher_test.clj
test/lan_clip/socket/: client_test.clj  integration_test.clj  protocol_codec_test.clj  server_test.clj
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  notifications.test.ts  notifications.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
